--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,27 @@
+body {
+  font-family: 'Raleway', sans-serif;
+}
+
+/**** HEADER ****/
+
 .header {
-  max-width: 800px;
+  background-color: #f6f7f9;
+}
+
+.header .wrapper {
+  padding: 0 100px;
+  margin: 0 auto;
+  max-width: 1000px;
   align-items: center;
   display: flex;
   justify-content: space-between;
-  margin: 0 auto;
+  height: 45px;
+}
+
+.header__logo h1 {
+  font-family: 'Raleway', sans-serif;
+  font-size: 22px;
+  text-transform: uppercase;
 }
 
 .header__navigaiton ul {
@@ -12,4 +30,18 @@
 
 .header__navigation li {
   display: inline-block;
+  margin: 0 7px;
+}
+
+.header__navigation a {
+  text-transform: uppercase;
+  text-decoration: none;
+  font-size: 12px;
+  font-weight: 600;
+  color: #000;
+}
+
+/**** HERO ****/
+
+.hero {
 }
