--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,14 @@
+*,
+*::after,
+*::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   font-family: 'Raleway', sans-serif;
 }
-
 /**** HEADER ****/
 
 .header {
@@ -20,8 +27,10 @@ body {
 
 .header__logo h1 {
   font-family: 'Raleway', sans-serif;
-  font-size: 22px;
+  font-size: 20px;
   text-transform: uppercase;
+  margin: 0;
+  letter-spacing: 1px;
 }
 
 .header__navigaiton ul {
@@ -36,12 +45,53 @@ body {
 .header__navigation a {
   text-transform: uppercase;
   text-decoration: none;
-  font-size: 12px;
-  font-weight: 600;
+  font-size: 11.5px;
+  font-weight: 700;
   color: #000;
 }
 
 /**** HERO ****/
 
 .hero {
+  background-image: url('../img/image-1.jpg');
+  height: 525px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.hero .wrapper {
+  padding: 60px;
+  margin: 0 auto;
+  height: 245px;
+  width: 610px;
+  background: rgba(255, 255, 255, 0.85);
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.hero__content h1 {
+  font-size: 26px;
+  font-weight: 600;
+  text-transform: uppercase;
+  margin: 0;
+}
+
+.hero__content h2 {
+  font-size: 14px;
+  font-family: 'Noto Serif', serif;
+  font-style: italic;
+  font-weight: 500;
+  margin-bottom: 5px;
+}
+
+.hero__content p {
+  font-size: 14px;
+  line-height: 1.7;
+  font-weight: 500;
 }
