--- a/refactor/css/main.css
+++ b/refactor/css/main.css
@@ -1,9 +1,3 @@
-html {
-  color: #222;
-  font-size: 1em;
-  line-height: 1.5;
-}
-
 ::-moz-selection {
   background: #b3d4fc;
   text-shadow: none;
@@ -40,6 +34,11 @@ AUTHOR CUSTOM STYLES
   text-rendering: optimizeLegibility;
 }
 
+html {
+  color: #222;
+  font-size: 62.5%;
+}
+
 body {
   font-family: 'Raleway', sans-serif;
 }
@@ -47,22 +46,21 @@ body {
 /**** REUSABLE COMPONENTS ****/
 
 p {
-  padding-top: 5px;
-  font-size: 9.5px;
+  padding-top: 0.5rem;
+  font-size: 0.95rem;
   line-height: 1.5;
 }
 
 h3 {
   text-transform: uppercase;
   font-weight: 600;
-  font-size: 13px;
-  letter-spacing: 0.5px;
+  font-size: 1.3rem;
+  letter-spacing: 0.005rem;
 }
 
 .wrapper {
-  padding: 0 100px;
   margin: 0 auto;
-  max-width: 1000px;
+  max-width: 80rem;
   display: flex;
   justify-content: space-between;
   text-align: center;
@@ -72,7 +70,7 @@ h3 {
 .header {
   text-align: center;
   text-transform: uppercase;
-  font-size: 11px;
+  font-size: 1.1rem;
 }
 
 #active {
@@ -86,8 +84,8 @@ h3 {
 }
 
 .blog__entry {
-  flex-basis: 250px;
-  margin-bottom: 25px;
+  flex-basis: 25rem;
+  margin-bottom: 2.5rem;
   background-color: #f6f7f9;
 }
 
@@ -96,26 +94,26 @@ h3 {
 }
 
 .blog__content {
-  padding: 20px;
+  padding: 2rem;
 }
 
 .blog__content--title {
   text-transform: uppercase;
   font-weight: 600;
-  font-size: 13px;
-  letter-spacing: 0.5px;
+  font-size: 1.3rem;
+  letter-spacing: 0.005rem;
 }
 
 .blog__content--date {
   font-family: 'Noto Serif', serif;
   font-style: italic;
   font-weight: 500;
-  font-size: 9px;
+  font-size: 0.9rem;
 }
 
 .blog__content--body {
-  padding-top: 5px;
-  font-size: 9.5px;
+  padding: 0.5rem 0;
+  font-size: 0.95rem;
   text-align: left;
   line-height: 1.5;
 }
@@ -124,9 +122,9 @@ h3 {
   color: #e40015;
   text-transform: uppercase;
   text-decoration: none;
-  font-size: 8px;
+  font-size: 0.8rem;
   font-weight: 700;
-  letter-spacing: 0.5px;
+  letter-spacing: 0.005rem;
   transition: all 0.3s;
 }
 
@@ -142,21 +140,21 @@ h3 {
 
 .navbar .wrapper {
   align-items: center;
-  height: 45px;
+  height: 4.5rem;
   justify-content: space-between;
 }
 
 .navbar__logo--text {
   font-family: 'Raleway', sans-serif;
-  font-size: 21px;
+  font-size: 2.1rem;
   text-transform: uppercase;
   margin: 0;
-  letter-spacing: 1px;
+  letter-spacing: 0.1rem;
   font-weight: 600;
 }
 
 .navbar__nav {
-  width: 320px;
+  width: 32rem;
 }
 
 .navbar__nav ul {
@@ -168,7 +166,7 @@ h3 {
 .navbar__nav--item {
   text-transform: uppercase;
   text-decoration: none;
-  font-size: 11.5px;
+  font-size: 1.15rem;
   font-weight: 600;
   color: #000;
   transition: all 0.3s;
@@ -182,7 +180,7 @@ h3 {
 
 .hero {
   background-image: url('../img/image-1.jpg');
-  height: 525px;
+  height: 52.5rem;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -192,10 +190,10 @@ h3 {
 }
 
 .hero .wrapper {
-  padding: 60px;
+  padding: 6rem;
   margin: 0 auto;
-  height: 245px;
-  width: 610px;
+  height: 24.5rem;
+  width: 61rem;
   background: rgba(255, 255, 255, 0.9);
   justify-content: center;
   align-items: center;
@@ -204,22 +202,22 @@ h3 {
 }
 
 .hero__content--title {
-  font-size: 27px;
+  font-size: 2.7rem;
   font-weight: 600;
   text-transform: uppercase;
   margin: 0;
 }
 
 .hero__content--date {
-  font-size: 14px;
+  font-size: 1.4rem;
   font-family: 'Noto Serif', serif;
   font-style: italic;
   font-weight: 500;
-  margin-bottom: 10px;
+  margin-bottom: 1rem;
 }
 
 .hero__content--body {
-  font-size: 14px;
+  font-size: 1.4rem;
   line-height: 1.7;
   font-weight: 500;
   text-align: center;
@@ -227,37 +225,39 @@ h3 {
 
 /**** Blog ****/
 .blog {
-  padding: 55px 0 30px 0;
+  padding: 5.5rem 0 3rem 0;
   text-align: center;
 }
 
 .blog__list {
-  padding-top: 20px;
+  padding-top: 2rem;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  flex-basis: 525px;
+  flex-basis: 52.5rem;
 }
 
 .blog__about {
-  padding-top: 20px;
-  flex-basis: 250px;
+  display: flex;
+  align-self: flex-start;
+  padding-top: 2rem;
+  flex-basis: 25rem;
 }
 
 .blog__about .blog__content--title {
-  font-size: 16px;
+  font-size: 1.6rem;
 }
 
 /**** RELATED POSTS ****/
 
 .related-posts {
   background-color: #f6f7f9;
-  padding: 55px 0 30px 0;
+  padding: 5.5rem 0 3rem 0;
   text-align: center;
 }
 
 .related-posts__list {
-  padding-top: 20px;
+  padding-top: 2rem;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -267,7 +267,7 @@ h3 {
 
 footer {
   background-color: #444444;
-  padding: 45px 0;
+  padding: 4.5rem 0;
 }
 
 footer .wrapper {
@@ -281,8 +281,8 @@ footer .wrapper {
 }
 
 .footer__content--title {
-  font-size: 12px;
-  letter-spacing: 0.5px;
+  font-size: 1.2rem;
+  letter-spacing: 0.005rem;
   text-transform: uppercase;
   font-weight: 600;
 }
@@ -298,10 +298,10 @@ footer .wrapper {
 .footer__nav a {
   text-transform: uppercase;
   text-decoration: none;
-  font-size: 11px;
+  font-size: 1.1rem;
   font-weight: 600;
   color: #fff;
-  letter-spacing: 0.5px;
+  letter-spacing: 0.005rem;
   transition: all 0.3s;
 }
 
@@ -314,16 +314,16 @@ footer .wrapper {
 }
 
 .footer__newsletter--subscribe {
-  padding-top: 10px;
+  padding-top: 1rem;
   display: flex;
 }
 
 .footer__newsletter--subscribe input {
-  height: 35px;
-  width: 250px;
+  height: 3.5rem;
+  width: 25rem;
   border: none;
   text-align: center;
-  font-size: 14px;
+  font-size: 1.4rem;
   font-family: 'Noto Serif', serif;
   font-style: italic;
 }
@@ -332,11 +332,11 @@ footer .wrapper {
   background-color: #e40015;
   border: none;
   color: #fff;
-  height: 35px;
-  width: 125px;
+  height: 3.5rem;
+  width: 12.5rem;
   text-align: center;
-  font-size: 10px;
-  margin-left: 2.5px;
+  font-size: 1rem;
+  margin-left: 0.25re;
   text-transform: uppercase;
   transition: 0.3s all;
 }
@@ -383,24 +383,53 @@ MEDIA QUERIES
 ========================================================================== 
 */
 
-@media only screen and (max-width: 768px) {
+/* @media only screen and (max-width: 1000px) {
   .wrapper {
+    justify-content: space-evenly;
+    padding: 0 5rem;
+  }
+
+  .blog__about .blog__entry {
+    width: 25rem;
+  }
+
+  .related-posts__list {
+    justify-content: space-evenly;
+  }
+} */
+
+@media only screen and (max-width: 800px) {
+  .wrapper {
+    padding: 0 5rem;
     justify-content: center;
   }
 
   .hero .wrapper {
     width: 80%;
     height: auto;
-    padding: 30px;
+    padding: 6rem;
   }
 
-  .related-posts__list,
-  .blog__list {
-    justify-content: space-evenly;
+  .blog__list,
+  .related-posts__list {
+    justify-content: space-around;
   }
 
-  .blog__list {
-    flex-basis: auto;
+  .blog__about {
+    padding-top: 0;
+  }
+
+  .blog__entry {
+    max-width: 51.2rem;
+    margin-bottom: 1.1rem;
+  }
+
+  .blog__image {
+    max-width: 51.2rem;
+  }
+
+  .related-posts__list {
+    flex-basis: 52.5rem;
   }
 
   .footer .wrapper {
@@ -428,7 +457,7 @@ MEDIA QUERIES
   .footer__newsletter,
   .footer__content {
     width: 480%;
-    padding-top: 20px;
+    padding-top: 2rem;
   }
 
   .footer__nav ul {
@@ -441,17 +470,17 @@ MEDIA QUERIES
   }
 }
 
-@media only screen and (max-width: 425px) {
+@media only screen and (max-width: 600px) {
   .wrapper {
-    padding: 0 20px;
+    padding: 0 2rem;
   }
 
   .header {
-    font-size: 13px;
+    font-size: 1.3rem;
   }
 
   .navbar {
-    padding: 15px 0;
+    padding: 1.5rem 0;
   }
 
   .navbar .wrapper {
@@ -459,43 +488,50 @@ MEDIA QUERIES
   }
 
   .navbar__nav {
-    padding-top: 5px;
+    padding-top: 0.5rem;
     width: 100%;
   }
 
   .related-posts__list,
-  .blog__list {
-    justify-content: center;
+  .blog__list,
+  .blog__about {
     flex-direction: column;
-    max-width: 250px;
+    max-width: 25rem;
+    align-self: auto;
+  }
+
+  .blog .wrapper {
+    flex-direction: column;
+    align-items: center;
   }
 
   .blog__entry {
-    width: 250px;
+    width: 25rem;
+    margin-bottom: 2.5rem;
   }
 
   .blog__image {
-    width: 250px;
-    height: 220px;
+    width: 25rem;
+    height: 22rem;
     object-fit: cover;
     object-position: right;
   }
 
   .blog__content--title {
-    font-size: 16px;
+    font-size: 1.6rem;
   }
 
   .blog__content--date {
-    font-size: 12px;
+    font-size: 1.2rem;
   }
 
   .blog__content--body {
-    font-size: 12px;
+    font-size: 1.2rem;
     text-align: center;
   }
 
   .blog__content--btn {
-    font-size: 10px;
+    font-size: 1rem;
   }
 }
 
