--- a/refactor/styles/styles.css
+++ b/refactor/styles/styles.css
@@ -179,7 +179,7 @@ h3 {
 /**** HERO ****/
 
 .hero {
-  background-image: url('../img/image-1.jpg');
+  background-image: url('../assets/image-1.jpg');
   height: 52.5rem;
   background-position: center;
   background-repeat: no-repeat;
